course page added

--- a/course-display.html
+++ b/course-display.html
@@ -45,7 +45,7 @@
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="index3.html" class="nav-link">Home</a>
+                    <a href="home.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="course-display.html" class="nav-link">Courses</a>
@@ -144,7 +144,7 @@
                         </li>
                         <li class="nav-header">Courses</li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="course-display.html" class="nav-link">
                                 <i class="nav-icon fas fa-copy"></i>
                                 <p>
                                     Courses
@@ -187,7 +187,7 @@
                 <div class="row">
                     <div class="col-12 p-0">
                         <div class="add-button-box mb-3 d-flex justify-content-end">
-                            <a href="/admin/add-course" class="btn btn-primary">Add course</a>
+                            <a href="course-add.html" class="btn btn-primary">Add course</a>
                         </div>
                         <div class="card">
                             <div class="card-header">
@@ -257,8 +257,8 @@
                                                         <td>
                                                             <h5><span class="badge bg-danger">Inactive</span></h5>
                                                         </td>
-                                                        <td><a href="/admin/edit-course/1" class="btn-sm btn-primary">Edit</a><a
-                                                                href="/admin/add-course-resource/1" class="btn-sm btn-primary ml-2">Add
+                                                        <td><a href="course-edit.html" class="btn-sm btn-primary">Edit</a><a
+                                                                href="course-resource.html" class="btn-sm btn-primary ml-2">Add
                                                                 Resources</a><a class="btn-sm btn-danger ml-2"
                                                                 href="/admin/delete-course/1">Delete</a> <a
                                                                 href="/admin/change-course-status/1"
