--- a/course-category.html
+++ b/course-category.html
@@ -48,7 +48,7 @@
                     <a href="home.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Courses</a>
+                    <a href="course-display.html" class="nav-link">Courses</a>
                 </li>
             </ul>
 
@@ -144,7 +144,7 @@
                         </li>
                         <li class="nav-header">Courses</li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="course-display.html" class="nav-link">
                                 <i class="nav-icon fas fa-copy"></i>
                                 <p>
                                     Courses
